added custom break widget with a load of edits

--- a/widgets/breaks/breaks.html
+++ b/widgets/breaks/breaks.html
@@ -1,2 +1,10 @@
-<h1>Title</h1>
+<h1 class="title">Calvin Break Tracker</h1>
+<br><br>
+<h2 class="header">Calvin has had:</h2>
+<br>
 <div data-bind="value"></div>
+<br>
+<h2 class="header">breaks today!</h2>
+<br>
+<br>
+<h2 data-bind="lol" class="footer"></h2>
